# mercury-explainability

./: .bumpversion.cfg  404.html  BasicTutorial_colab.ipynb  CHANGELOG.md  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/.workflows/: test.yml
.github/workflows/: publish.yml  pypi_upload.yml  test.yml
docs/: index.md
docs/reference/: explainers.md  explanations.md
mercury/explainability/: __init__.py  create_tutorials.py  pyspark_utils.py
mercury/explainability/explainers/: __init__.py  _dummy_alibi_explainers.py  ale.py  anchors.py  cf_strategies.py  clustering_tree_explainer.py  counter_fact_basic.py  counter_fact_importance.py  explainer.py  monotonicity.py  partial_dependence.py  shuffle_importance.py
mercury/explainability/explainers/_tree_splitters/: cut_finder.c  cut_finder.pyx
mercury/explainability/explanations/: __init__.py  anchors.py  clustering_tree_explanation.py  counter_factual.py  monotonicity.py  partial_dependence.py  shuffle_importance.py
reference/explainers/: index.html
reference/explanations/: index.html
site/: 404.html  index.html  objects.inv
site/reference/explainers/: index.html
site/reference/explanations/: index.html
tests/: Dockerfile.test  test_create_tutorials.py
tests/explainability/: conftest.py  test_ale.py  test_anchors_extended.py  test_clustering_tree_explainer.py  test_counterfactual_basic.py  test_counterfactualproto.py  test_counterfactuals.py  test_explanation.py  test_monotonicity_explainer.py  test_monotonicity_explanation.py  test_partial_dependence.py  test_pyspark_wrapper.py  test_serializer.py  test_shuffle_importance.py  test_strategy.py  test_tree_splitters.py
tests/explainability/model_and_data/: FICO_lr_model.pkl  boston.csv  explain_data.csv  fit_data_red.csv
tests/explainability/model_and_data_pyspark/: data_ale.csv  data_pandas_red.csv  data_tp_pandas.csv
tests/explainability/model_and_data_pyspark/assemblerScaled/metadata/: .part-00000.crc  part-00000
tests/explainability/model_and_data_pyspark/gbtModelPySpark/data/: .part-00000-76edbf1d-359e-4633-927a-8de47c6d57b3-c000.snappy.parquet.crc  .part-00001-76edbf1d-359e-4633-927a-8de47c6d57b3-c000.snappy.parquet.crc  .part-00002-76edbf1d-359e-4633-927a-8de47c6d57b3-c000.snappy.parquet.crc  .part-00003-76edbf1d-359e-4633-927a-8de47c6d57b3-c000.snappy.parquet.crc  part-00000-76edbf1d-359e-4633-927a-8de47c6d57b3-c000.snappy.parquet  part-00001-76edbf1d-359e-4633-927a-8de47c6d57b3-c000.snappy.parquet  part-00002-76edbf1d-359e-4633-927a-8de47c6d57b3-c000.snappy.parquet  part-00003-76edbf1d-359e-4633-927a-8de47c6d57b3-c000.snappy.parquet
tests/explainability/model_and_data_pyspark/gbtModelPySpark/metadata/: .part-00000.crc  part-00000
tests/explainability/model_and_data_pyspark/gbtModelPySpark/treesMetadata/: .part-00000-96219efb-a895-4f33-82d1-347c6f01251c-c000.snappy.parquet.crc  .part-00001-96219efb-a895-4f33-82d1-347c6f01251c-c000.snappy.parquet.crc  .part-00002-96219efb-a895-4f33-82d1-347c6f01251c-c000.snappy.parquet.crc  .part-00003-96219efb-a895-4f33-82d1-347c6f01251c-c000.snappy.parquet.crc  part-00000-96219efb-a895-4f33-82d1-347c6f01251c-c000.snappy.parquet  part-00001-96219efb-a895-4f33-82d1-347c6f01251c-c000.snappy.parquet  part-00002-96219efb-a895-4f33-82d1-347c6f01251c-c000.snappy.parquet  part-00003-96219efb-a895-4f33-82d1-347c6f01251c-c000.snappy.parquet
tutorial/: BasicTutorial_colab.ipynb
tutorials/: BasicTutorial.ipynb  BasicTutorial_colab.ipynb  tutorial_clustering_tree_explainer.ipynb  tutorial_counterfactual_basic_explainer.ipynb  tutorial_counterfactual_basic_explainer_higher_dim.ipynb  tutorial_monotonicity_explainer.ipynb  tutorial_partial_dependence_plots.ipynb  tutorial_shuffle_importance_explainer.ipynb
