[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mercury-explainability"
license = {file = "LICENSE.txt"}
version = "0.0.1"
authors = [
  { name="Mercury Team", email="mercury.group@bbva.com" },
]
description = "Mercury's robust is a library to perform robust testing on models and/or datasets.."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  'pandas',
  'numpy>=1.13.1',
  'bokeh>=0.12.13',
  'simanneal>=0.4.1',
  'shap<0.36',
  'dill>=0.3.1',
  'Cython',
  'graphviz'
]

[project.optional-dependencies]
dev = [
  'pyspark>=2.4.3',
  'pytest',
  'flake8',
  'scikit-learn',
]
doc = [
  'mkdocs',
  'mkdocstrings[python]',
  'mkdocs-material',
  'mkdocs-minify-plugin==0.5.0',
  'mkdocs-exclude',
  'nbconvert',
]

[tool.setuptools.packages.find]
include = ["mercury*"]
exclude = ["docs*", "tests*", "tutorials"]


[project.urls]
"Homepage" = "https://github.com/BBVA/mercury-robust"
"Bug Tracker" = "https://github.com/BBVA/mercury-robust/issues"
