[build-system]
requires = ["setuptools>=61.0", "numpy", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "mercury-explainability"
license = {file = "LICENSE.txt"}
version = "1.1.4"
authors = [
  { name="Mercury Team", email="mercury.group@bbva.com" },
]
description = "Mercury's explainability is a library with implementations of different state-of-the-art methods in the field of explainability"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  'pandas',
  'numpy',
  'bokeh',
  'simanneal',
  'shap',
  'dill',
  'Cython',
  'graphviz',
]

[project.optional-dependencies]
dev = [
  'pyspark',
  'pytest',
  'flake8',
  'scikit-learn',
  'alibi',
  'tensorflow'
]
doc = [
  'mkdocs',
  'mkdocstrings[python]',
  'mkdocs-material',
  'mkdocs-minify-plugin==0.5.0',
  'mkdocs-exclude',
  'nbconvert',
]

[tool.setuptools.packages.find]
include = ["mercury*"]
exclude = ["docs*", "tests*", "tutorials"]


[project.urls]
"Homepage" = "https://github.com/BBVA/mercury-explainability"
"Bug Tracker" = "https://github.com/BBVA/mercury-explainability/issues"
